# rag-complaints-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_task1.py  run_task2.py  run_task3.py  run_task4.py
app/: app.py
configs/: config.yaml  logging.yaml
data/processed/: chunks.parquet
scripts/: build_index.py  make_dataset.py  make_dataset_simple.py
src/data/: cleaning.py  loader.py
src/features/: chunking.py  embeddings.py
src/index/: metadata.py  store_faiss.py
src/rag/: pipeline.py  prompts.py  retriever.py
src/ui/: presenters.py
tests/: test_chunking.py  test_retriever.py
